--- a/notebooks/notebook_model_tests.ipynb
+++ b/notebooks/notebook_model_tests.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import os"
    ]
   },
@@ -20,15 +21,15 @@
      "output_type": "stream",
      "text": [
       "/Users/maxburger/code/MadMax1995bb/powder_alert2.0/notebooks\n",
-      "total 864\n",
-      "drwxr-xr-x   8 maxburger  staff     256 Dec 10 11:50 \u001b[1m\u001b[36m.\u001b[m\u001b[m\n",
-      "drwxr-xr-x  18 maxburger  staff     576 Dec 10 11:34 \u001b[1m\u001b[36m..\u001b[m\u001b[m\n",
+      "total 872\n",
+      "drwxr-xr-x   8 maxburger  staff     256 Dec 10 12:54 \u001b[1m\u001b[36m.\u001b[m\u001b[m\n",
+      "drwxr-xr-x  19 maxburger  staff     608 Dec 10 11:54 \u001b[1m\u001b[36m..\u001b[m\u001b[m\n",
       "-rw-r--r--   1 maxburger  staff       0 Dec 10 08:36 .keep\n",
       "-rw-r--r--   1 maxburger  staff  264154 Dec 10 11:50 Wisal_notebook.ipynb\n",
       "-rw-r--r--   1 maxburger  staff   11202 Dec 10 11:50 alternative_notebook.ipynb\n",
       "-rw-r--r--   1 maxburger  staff   59870 Dec 10 11:50 notebook_Anita-Gei_get_openmeteo_data.ipynb\n",
-      "-rw-r--r--   1 maxburger  staff   38604 Dec 10 11:50 notebook_Anita-Gei_model_tests.ipynb\n",
-      "-rw-r--r--   1 maxburger  staff   59870 Dec 10 09:27 notebook_MadMax1995bb.ipynb\n"
+      "-rw-r--r--   1 maxburger  staff   59870 Dec 10 09:27 notebook_MadMax1995bb.ipynb\n",
+      "-rw-r--r--@  1 maxburger  staff   41391 Dec 10 13:48 notebook_model_tests.ipynb\n"
      ]
     }
    ],
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pb/bz16q8fx0flb7flbn8cbcsdw0000gn/T/ipykernel_72738/3396273356.py:1: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
+      "/var/folders/pb/bz16q8fx0flb7flbn8cbcsdw0000gn/T/ipykernel_44863/3396273356.py:1: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
       "  df_hist_openmeteo['date'] = pd.to_datetime(df_hist_openmeteo['date'], infer_datetime_format=True)\n"
      ]
     }
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
        "[3 rows x 32 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +290,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +355,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((402696,), (402696, 31))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape, X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +384,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -380,6 +401,48 @@
    ],
    "source": [
     "df_hist_openmeteo.plot(y='snowfall')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pb/bz16q8fx0flb7flbn8cbcsdw0000gn/T/ipykernel_44863/1751156339.py:3: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  y_train_baseline = y_train.shift(1).fillna(method=\"bfill\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.016326872623946165"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "y_train_baseline = y_train.shift(1).fillna(method=\"bfill\")\n",
+    "train_mae = mean_absolute_error(y_train, y_train_baseline)\n",
+    "train_mae"
    ]
   },
   {
