--- a/notebooks/notebook_model_tests.ipynb
+++ b/notebooks/notebook_model_tests.ipynb
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1224,8 +1224,8 @@
     "df = df_hist_openmeteo.copy()\n",
     "snowfall_series_list = []\n",
     "# manual, test\n",
-    "# df_hist_openmeteo['snowfall_1h'] = df_hist_openmeteo['snowfall'].shift(-1)\n",
-    "# df_hist_openmeteo[['date','snowfall','snowfall_1h']]\n",
+    "# df['snowfall_1h'] = df['snowfall'].shift(-1)\n",
+    "# df[['date','snowfall','snowfall_1h']]\n",
     "\n",
     "# for the next 48 hours:\n",
     "for i in range(1,48):\n",
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1310,8 @@
     "    training_length=96,\n",
     "    n_epochs=50,\n",
     "    random_state=42,\n",
-    ")"
+    ")\n",
+    "# not working for 48h forecast?"
    ]
   },
   {
@@ -1896,48 +1897,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/pb/bz16q8fx0flb7flbn8cbcsdw0000gn/T/ipykernel_44863/1751156339.py:3: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  y_train_baseline = y_train.shift(1).fillna(method=\"bfill\")\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.016326872623946165"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import mean_absolute_error\n",
-    "\n",
-    "y_train_baseline = y_train.shift(1).fillna(method=\"bfill\")\n",
-    "train_mae = mean_absolute_error(y_train, y_train_baseline)\n",
-    "train_mae"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -1963,7 +1922,7 @@
     "\n",
     "mae_mean = mean_absolute_error(test_probe.values(), mean_baseline_pred)  #better\n",
     "\n",
-    "print(f\"naive seasonal forecasting (shifting 465 days) gives a mae of {mae_seasonal_naive} whereas a basic mean prediction leads to a mae of {mae_mean}\")"
+    "print(f\"naive seasonal forecasting (shifting 365 days) gives a mae of {mae_seasonal_naive} whereas a basic mean prediction leads to a mae of {mae_mean}\")"
    ]
   },
   {
