--- a/notebooks/notebook_model_tests.ipynb
+++ b/notebooks/notebook_model_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,8 @@
     "\n",
     "import optuna\n",
     "import torch\n",
-    "from pytorch_lightning.callbacks import EarlyStopping\n",
+    "import pytorch_lightning as pl\n",
+    "from pytorch_lightning.callbacks import Callback, EarlyStopping\n",
     "from darts.utils.timeseries_generation import datetime_attribute_timeseries"
    ]
   },
@@ -6396,10 +6397,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "current_dir = os.getcwd()\n",
+    "relative_path = os.path.join(os.path.dirname(current_dir),\"models\")\n",
+    "file_name = f\"TransformerModel_{datetime.now().strftime('%Y-%m-%d_%H:%M:%S')}.pt\"\n",
+    "file_path = os.path.join(relative_path,file_name)\n",
+    "file_path\n",
+    "\n",
+    "es = EarlyStopping(\n",
+    "    monitor=\"val_loss\",\n",
+    "    patience=5,\n",
+    "    min_delta = 0.001,\n",
+    "    mode='min',\n",
+    ")\n",
+    "\n",
+    "pl_trainer_kwargs = {\n",
+    "    \"accelerator\": \"auto\",\n",
+    "    \"callbacks\":[es],\n",
+    "    \"enable_progress_bar\": True,\n",
+    "}\n",
+    "\n",
     "best_model = TransformerModel(\n",
     "    input_chunk_length=24,\n",
     "    output_chunk_length=48,\n",
@@ -6407,15 +6429,41 @@
     "    d_model=32,\n",
     "    batch_size=16,\n",
     "    activation=\"relu\",\n",
-    "    n_epochs=5, # increase! just for testing\n",
+    "    n_epochs=10, # increase! just for testing\n",
+    "    torch_metrics=mae,\n",
+    "    pl_trainer_kwargs=pl_trainer_kwargs,\n",
     "    random_state=42,\n",
-    "    model_name=\"best_model\"\n",
+    "    model_name=file_name,\n",
+    "    save_checkpoints=True,\n",
+    "    work_dir=relative_path,\n",
+    "    force_reset=False\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'TransformerModel' object has no attribute 'save_model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[104], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mbest_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msave_model\u001b[49m(file_path)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'TransformerModel' object has no attribute 'save_model'"
+     ]
+    }
+   ],
+   "source": [
+    "best_model.save_model(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -6435,16 +6483,16 @@
       "2 | val_criterion       | MSELoss             | 0      | train\n",
       "3 | train_metrics       | MetricCollection    | 0      | train\n",
       "4 | val_metrics         | MetricCollection    | 0      | train\n",
-      "5 | encoder             | Linear              | 992    | train\n",
+      "5 | encoder             | Linear              | 2.0 K  | train\n",
       "6 | positional_encoding | _PositionalEncoding | 0      | train\n",
-      "7 | transformer         | Transformer         | 238 K  | train\n",
-      "8 | decoder             | Linear              | 1.6 K  | train\n",
+      "7 | transformer         | Transformer         | 1.1 M  | train\n",
+      "8 | decoder             | Linear              | 3.1 K  | train\n",
       "--------------------------------------------------------------------\n",
-      "241 K     Trainable params\n",
+      "1.1 M     Trainable params\n",
       "0         Non-trainable params\n",
-      "241 K     Total params\n",
-      "0.966     Total estimated model params size (MB)\n",
-      "88        Modules in train mode\n",
+      "1.1 M     Total params\n",
+      "4.574     Total estimated model params size (MB)\n",
+      "130       Modules in train mode\n",
       "0         Modules in eval mode\n"
      ]
     },
@@ -6452,31 +6500,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4: 100%|██████████| 4598/4598 [04:24<00:00, 17.36it/s, train_loss=0.0139, val_loss=0.0523]   "
+      "Epoch 9: 100%|██████████| 4598/4598 [06:40<00:00, 11.48it/s, train_loss=0.0303, val_loss=0.0531]  "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`Trainer.fit` stopped: `max_epochs=5` reached.\n"
+      "`Trainer.fit` stopped: `max_epochs=10` reached.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4: 100%|██████████| 4598/4598 [04:24<00:00, 17.36it/s, train_loss=0.0139, val_loss=0.0523]\n"
+      "Epoch 9: 100%|██████████| 4598/4598 [06:40<00:00, 11.48it/s, train_loss=0.0303, val_loss=0.0531]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TransformerModel(output_chunk_shift=0, d_model=64, nhead=4, num_encoder_layers=3, num_decoder_layers=3, dim_feedforward=512, dropout=0.0641, activation=ReGLU, norm_type=None, custom_encoder=None, custom_decoder=None, input_chunk_length=24, output_chunk_length=48, batch_size=16, n_epochs=10, pl_trainer_kwargs={'callbacks': [<pytorch_lightning.callbacks.early_stopping.EarlyStopping object at 0x7f7020e85de0>], 'enable_progress_bar': True}, random_state=42, model_name=TransformerModel_2024-12-12_10:53:37.pt, save_checkpoints=True, work_dir=/home/anita/code/MadMax1995bb/powder_alert2.0/models, force_reset=True)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "history = best_model.fit(series=y_train, val_series=y_val, past_covariates=X_train, val_past_covariates=X_val)"
+    "best_model.fit(series=y_train, val_series=y_val, past_covariates=X_train, val_past_covariates=X_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -6492,66 +6550,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting DataLoader 0: 100%|██████████| 1/1 [00:00<00:00, 91.59it/s] \n",
-      "Snow forecast for the next 48 hours: [[ 0.02232961]\n",
-      " [ 0.01701374]\n",
-      " [ 0.01972473]\n",
-      " [ 0.00788417]\n",
-      " [ 0.00623076]\n",
-      " [-0.00140317]\n",
-      " [ 0.00254974]\n",
-      " [ 0.01335419]\n",
-      " [ 0.00402979]\n",
-      " [ 0.01956217]\n",
-      " [ 0.02771806]\n",
-      " [ 0.01984456]\n",
-      " [ 0.02296323]\n",
-      " [ 0.0286237 ]\n",
-      " [ 0.03138054]\n",
-      " [ 0.03060036]\n",
-      " [ 0.0399884 ]\n",
-      " [ 0.0279744 ]\n",
-      " [ 0.02951048]\n",
-      " [ 0.01893843]\n",
-      " [ 0.01525628]\n",
-      " [ 0.01862368]\n",
-      " [ 0.02117774]\n",
-      " [ 0.03623236]\n",
-      " [ 0.0224226 ]\n",
-      " [ 0.02771145]\n",
-      " [ 0.01443605]\n",
-      " [ 0.02857348]\n",
-      " [ 0.03662658]\n",
-      " [ 0.02226163]\n",
-      " [ 0.03602177]\n",
-      " [ 0.03239708]\n",
-      " [ 0.03149629]\n",
-      " [ 0.05065922]\n",
-      " [ 0.03394043]\n",
-      " [ 0.02463998]\n",
-      " [ 0.03315534]\n",
-      " [ 0.03079554]\n",
-      " [ 0.05005179]\n",
-      " [ 0.04385769]\n",
-      " [ 0.06728901]\n",
-      " [ 0.05971084]\n",
-      " [ 0.05378332]\n",
-      " [ 0.04617173]\n",
-      " [ 0.02595531]\n",
-      " [ 0.03344082]\n",
-      " [ 0.02820702]\n",
-      " [ 0.05151556]]\n"
+      "Predicting DataLoader 0: 100%|██████████| 1/1 [00:00<00:00, 38.56it/s]\n",
+      "Snow forecast for the next hour: 0.022329610140609968 cm\n",
+      "48\n"
      ]
     }
    ],
    "source": [
     "forecast = model_transformer.predict(n=48)\n",
-    "print(f\"Snow forecast for the next 48 hours: {forecast.values()}\")"
+    "#forecast = model_transformer.predict(n=48, series=y_train_val, past_covariates=X_train_val) --> gives worse MAE?!\n",
+    "\n",
+    "print(f\"Snow forecast for the next hour: {forecast.values()[0][0]} cm\")\n",
+    "print(len(forecast.values()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -6565,10 +6580,11 @@
      "data": {
       "text/plain": [
        "{'TransformerModel': 0.13741441645600405,\n",
-       " \"'best' TransformerModel\": 0.05604817198061307}"
+       " \"'best' TransformerModel\": 0.05604817198061307,\n",
+       " 'BaselineModel': 0.10568119420332105}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6579,6 +6595,135 @@
     "\n",
     "model_selection[\"'best' TransformerModel\"] = mae_best_model\n",
     "model_selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/anita/.pyenv/versions/3.10.6/envs/powder_alert2.0/lib/python3.10/site-packages/darts/models/forecasting/torch_forecasting_model.py:1842: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  model: TorchForecastingModel = torch.load(\n",
+      "/home/anita/.pyenv/versions/3.10.6/envs/powder_alert2.0/lib/python3.10/site-packages/torch/nn/modules/transformer.py:379: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TransformerModel(output_chunk_shift=0, d_model=64, nhead=4, num_encoder_layers=3, num_decoder_layers=3, dim_feedforward=512, dropout=0.0641, activation=ReGLU, norm_type=None, custom_encoder=None, custom_decoder=None, input_chunk_length=24, output_chunk_length=48, batch_size=16, n_epochs=10, pl_trainer_kwargs={'callbacks': [<pytorch_lightning.callbacks.early_stopping.EarlyStopping object at 0x7f7020d08340>], 'enable_progress_bar': True}, random_state=42, model_name=TransformerModel_2024-12-12_10:53:37.pt, save_checkpoints=True, work_dir=/home/anita/code/MadMax1995bb/powder_alert2.0/models, force_reset=True)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trained_model = TransformerModel.load_from_checkpoint(file_path)\n",
+    "trained_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "HPU available: False, using: 0 HPUs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicting DataLoader 0: 100%|██████████| 1/1 [00:00<00:00, 70.18it/s]\n",
+      "Snow forecast for the next hour: 0.022329610140609968 cm\n"
+     ]
+    }
+   ],
+   "source": [
+    "trained_model.predict(n=48)\n",
+    "print(f\"Snow forecast for the next hour: {forecast.values()[0][0]} cm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Trainer' object has no attribute 'logger_connector'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[130], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m metrics_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[43mbest_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlogger_connector\u001b[49m\u001b[38;5;241m.\u001b[39mlogged_metrics)\n\u001b[1;32m      2\u001b[0m metrics_df\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Trainer' object has no attribute 'logger_connector'"
+     ]
+    }
+   ],
+   "source": [
+    "metrics_df = pd.DataFrame(best_model.trainer.logger_connector.logged_metrics)\n",
+    "metrics_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'train_loss': tensor(0.0303, dtype=torch.float64),\n",
+       " 'val_loss': tensor(0.0531, dtype=torch.float64)}"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_model.trainer.callback_metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(20, 8))\n",
+    "\n",
+    "if \"train_loss\" in metrics_df or \"val_loss\" in metrics_df:\n",
+    "    axes[0].plot(metrics_df.get(\"train_loss\", []), label=\"Training Loss\", color=\"blue\")\n",
+    "    axes[0].plot(metrics_df.get(\"val_loss\", []), label=\"Validation Loss\", color=\"orange\")\n",
+    "    axes[0].set_title(\"Loss Learning Curve\")\n",
+    "    axes[0].set_xlabel(\"Epochs\")\n",
+    "    axes[0].set_ylabel(\"Loss\")\n",
+    "    axes[0].legend()\n",
+    "\n",
+    "if \"train_mae\" in metrics_df or \"val_mae\" in metrics_df:\n",
+    "    axes[1].plot(metrics_df.get(\"train_mae\", []), label=\"Training MAE\", color=\"blue\")\n",
+    "    axes[1].plot(metrics_df.get(\"val_mae\", []), label=\"Validation MAE\", color=\"orange\")\n",
+    "    axes[1].set_title(\"MAE Learning Curve\")\n",
+    "    axes[1].set_xlabel(\"Epochs\")\n",
+    "    axes[1].set_ylabel(\"MAE\")\n",
+    "    axes[1].legend()\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -6624,9 +6769,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'TransformerModel' object has no attribute 'history'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[95], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(\u001b[43mhistory\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhistory\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmae\u001b[39m\u001b[38;5;124m\"\u001b[39m], label \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrain MAE\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(history\u001b[38;5;241m.\u001b[39mhistory[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mval_mae\u001b[39m\u001b[38;5;124m\"\u001b[39m], label \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValidation MAE\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mlegend();\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'TransformerModel' object has no attribute 'history'"
+     ]
+    }
+   ],
    "source": [
     "plt.plot(history.history[\"mae\"], label = \"Train MAE\")\n",
     "plt.plot(history.history[\"val_mae\"], label = \"Validation MAE\")\n",
@@ -6664,30 +6821,6 @@
     "forecast.plot(label=\"forecast\")\n",
     "plt.title(f\"Snowfall Actual vs Predicted | MAE = {mae_best_model}\")\n",
     "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_model.save_model()\n",
-    "\n",
-    "current_dir = os.getcwd()\n",
-    "relative_path = os.path.dirname(current_dir)\n",
-    "file_name = \"raw_data/historical_weather_openmeteo_01011979-08122024.csv\"\n",
-    "\n",
-    "file_path = os.path.join(relative_path, file_name)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "current_dir = os.getcwd()\n"
    ]
   }
  ],
