--- a/notebooks/notebook_model_tests.ipynb
+++ b/notebooks/notebook_model_tests.ipynb
@@ -6639,7 +6639,15 @@
     "relative_path = os.path.join(os.path.dirname(current_dir),\"models\")\n",
     "file_name = f\"TransformerModel_{datetime.now().strftime('%Y-%m-%d_%H:%M:%S')}.pt\"\n",
     "file_path = os.path.join(relative_path,file_name)\n",
-    "file_path\n",
+    "file_path\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "es = EarlyStopping(\n",
     "    monitor=\"val_loss\",\n",
@@ -6842,7 +6850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -6858,16 +6866,19 @@
     {
      "data": {
       "text/plain": [
-       "TransformerModel(output_chunk_shift=0, d_model=64, nhead=4, num_encoder_layers=3, num_decoder_layers=3, dim_feedforward=512, dropout=0.0641, activation=ReGLU, norm_type=None, custom_encoder=None, custom_decoder=None, input_chunk_length=24, output_chunk_length=48, batch_size=16, n_epochs=10, pl_trainer_kwargs={'callbacks': [<pytorch_lightning.callbacks.early_stopping.EarlyStopping object at 0x7f7020d08340>], 'enable_progress_bar': True}, random_state=42, model_name=TransformerModel_2024-12-12_10:53:37.pt, save_checkpoints=True, work_dir=/home/anita/code/MadMax1995bb/powder_alert2.0/models, force_reset=True)"
+       "TransformerModel(output_chunk_shift=0, d_model=64, nhead=4, num_encoder_layers=3, num_decoder_layers=3, dim_feedforward=512, dropout=0.0641, activation=ReGLU, norm_type=None, custom_encoder=None, custom_decoder=None, input_chunk_length=24, output_chunk_length=48, batch_size=16, n_epochs=10, pl_trainer_kwargs={'callbacks': [<pytorch_lightning.callbacks.early_stopping.EarlyStopping object at 0x7f7007179630>], 'enable_progress_bar': True}, random_state=42, model_name=TransformerModel_2024-12-12_10:53:37.pt, save_checkpoints=True, work_dir=/home/anita/code/MadMax1995bb/powder_alert2.0/models, force_reset=True)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trained_model = TransformerModel.load_from_checkpoint(file_path)\n",
+    "model_file = \"TransformerModel_2024-12-12_10:53:37.pt\"\n",
+    "model_path = os.path.join(relative_path,model_file)\n",
+    "\n",
+    "trained_model = TransformerModel.load_from_checkpoint(model_path)\n",
     "trained_model"
    ]
   },
@@ -6897,26 +6908,6 @@
    "source": [
     "trained_model.predict(n=48)\n",
     "print(f\"Snow forecast for the next hour: {forecast.values()[0][0]} cm\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "darts.models.forecasting.transformer_model.TransformerModel"
-      ]
-     },
-     "execution_count": 170,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(best_model)"
    ]
   },
   {
@@ -6989,7 +6980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -7000,21 +6991,10 @@
       "TPU available: False, using: 0 TPU cores\n",
       "HPU available: False, using: 0 HPUs\n"
      ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
     }
    ],
    "source": [
-    "backtest_results = best_model.backtest(\n",
+    "backtest_results = trained_model.backtest(\n",
     "    series = y_train_val,\n",
     "    past_covariates = X_train_val,\n",
     "    start = 0.7,\n",
@@ -7026,29 +7006,6 @@
     ")\n",
     "\n",
     "print(f\"MAE from backtesting optimized TransformerModel: {backtest_results}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'TransformerModel' object has no attribute 'history'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[95], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(\u001b[43mhistory\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhistory\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmae\u001b[39m\u001b[38;5;124m\"\u001b[39m], label \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrain MAE\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(history\u001b[38;5;241m.\u001b[39mhistory[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mval_mae\u001b[39m\u001b[38;5;124m\"\u001b[39m], label \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValidation MAE\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mlegend();\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'TransformerModel' object has no attribute 'history'"
-     ]
-    }
-   ],
-   "source": [
-    "plt.plot(history.history[\"mae\"], label = \"Train MAE\")\n",
-    "plt.plot(history.history[\"val_mae\"], label = \"Validation MAE\")\n",
-    "plt.legend();"
    ]
   },
   {
@@ -7078,7 +7035,7 @@
     }
    ],
    "source": [
-    "snowfall_series.plot(label=\"actual\")\n",
+    "y_test.plot(label=\"actual\")\n",
     "forecast.plot(label=\"forecast\")\n",
     "plt.title(f\"Snowfall Actual vs Predicted | MAE = {mae_best_model}\")\n",
     "plt.legend()"
