--- a/notebooks/notebook_model_DL_temperature.ipynb
+++ b/notebooks/notebook_model_DL_temperature.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -189,43 +189,15 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
        "      <th>temperature_2m</th>\n",
-       "      <th>relative_humidity_2m</th>\n",
        "      <th>dew_point_2m</th>\n",
        "      <th>apparent_temperature</th>\n",
-       "      <th>precipitation</th>\n",
-       "      <th>rain</th>\n",
-       "      <th>snowfall</th>\n",
        "      <th>snow_depth</th>\n",
-       "      <th>weather_code</th>\n",
-       "      <th>pressure_msl</th>\n",
-       "      <th>surface_pressure</th>\n",
-       "      <th>cloud_cover</th>\n",
-       "      <th>cloud_cover_low</th>\n",
-       "      <th>cloud_cover_mid</th>\n",
-       "      <th>cloud_cover_high</th>\n",
        "      <th>et0_fao_evapotranspiration</th>\n",
        "      <th>vapour_pressure_deficit</th>\n",
-       "      <th>wind_speed_10m</th>\n",
-       "      <th>wind_speed_100m</th>\n",
-       "      <th>wind_direction_10m</th>\n",
-       "      <th>wind_direction_100m</th>\n",
-       "      <th>wind_gusts_10m</th>\n",
        "      <th>soil_temperature_0_to_7cm</th>\n",
        "      <th>soil_temperature_7_to_28cm</th>\n",
        "      <th>soil_temperature_28_to_100cm</th>\n",
-       "      <th>soil_temperature_100_to_255cm</th>\n",
-       "      <th>soil_moisture_0_to_7cm</th>\n",
-       "      <th>soil_moisture_7_to_28cm</th>\n",
-       "      <th>soil_moisture_28_to_100cm</th>\n",
-       "      <th>soil_moisture_100_to_255cm</th>\n",
-       "      <th>sunshine_duration</th>\n",
-       "      <th>hour_sin</th>\n",
-       "      <th>hour_cos</th>\n",
-       "      <th>day_of_week_sin</th>\n",
-       "      <th>day_of_week_cos</th>\n",
-       "      <th>month_sin</th>\n",
        "      <th>month_cos</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -240,221 +212,67 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2024-12-08 22:00:00+00:00</th>\n",
-       "      <td>2024-12-08 22:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.500000</td>\n",
-       "      <td>0.866025</td>\n",
-       "      <td>-0.781831</td>\n",
-       "      <td>0.62349</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>0.866025</td>\n",
+       "      <th>2010-01-01 01:00:00+00:00</th>\n",
+       "      <td>-8.099</td>\n",
+       "      <td>-9.198999</td>\n",
+       "      <td>-11.659878</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.027411</td>\n",
+       "      <td>0.651</td>\n",
+       "      <td>0.901</td>\n",
+       "      <td>1.901</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-12-08 23:00:00+00:00</th>\n",
-       "      <td>2024-12-08 23:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.258819</td>\n",
-       "      <td>0.965926</td>\n",
-       "      <td>-0.781831</td>\n",
-       "      <td>0.62349</td>\n",
-       "      <td>-0.5</td>\n",
-       "      <td>0.866025</td>\n",
+       "      <th>2010-01-01 02:00:00+00:00</th>\n",
+       "      <td>-8.999</td>\n",
+       "      <td>-10.049000</td>\n",
+       "      <td>-12.844404</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.024612</td>\n",
+       "      <td>0.651</td>\n",
+       "      <td>0.901</td>\n",
+       "      <td>1.901</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         date  temperature_2m  \\\n",
-       "datetime                                                        \n",
-       "2024-12-08 22:00:00+00:00 2024-12-08 22:00:00             NaN   \n",
-       "2024-12-08 23:00:00+00:00 2024-12-08 23:00:00             NaN   \n",
+       "                           temperature_2m  dew_point_2m  apparent_temperature  \\\n",
+       "datetime                                                                        \n",
+       "2010-01-01 01:00:00+00:00          -8.099     -9.198999            -11.659878   \n",
+       "2010-01-01 02:00:00+00:00          -8.999    -10.049000            -12.844404   \n",
        "\n",
-       "                           relative_humidity_2m  dew_point_2m  \\\n",
-       "datetime                                                        \n",
-       "2024-12-08 22:00:00+00:00                   NaN           NaN   \n",
-       "2024-12-08 23:00:00+00:00                   NaN           NaN   \n",
+       "                           snow_depth  et0_fao_evapotranspiration  \\\n",
+       "datetime                                                            \n",
+       "2010-01-01 01:00:00+00:00         0.6                         0.0   \n",
+       "2010-01-01 02:00:00+00:00         0.6                         0.0   \n",
        "\n",
-       "                           apparent_temperature  precipitation  rain  \\\n",
-       "datetime                                                               \n",
-       "2024-12-08 22:00:00+00:00                   NaN            NaN   NaN   \n",
-       "2024-12-08 23:00:00+00:00                   NaN            NaN   NaN   \n",
-       "\n",
-       "                           snowfall  snow_depth  weather_code  pressure_msl  \\\n",
-       "datetime                                                                      \n",
-       "2024-12-08 22:00:00+00:00       NaN         NaN           NaN           NaN   \n",
-       "2024-12-08 23:00:00+00:00       NaN         NaN           NaN           NaN   \n",
-       "\n",
-       "                           surface_pressure  cloud_cover  cloud_cover_low  \\\n",
-       "datetime                                                                    \n",
-       "2024-12-08 22:00:00+00:00               NaN          NaN              NaN   \n",
-       "2024-12-08 23:00:00+00:00               NaN          NaN              NaN   \n",
-       "\n",
-       "                           cloud_cover_mid  cloud_cover_high  \\\n",
-       "datetime                                                       \n",
-       "2024-12-08 22:00:00+00:00              NaN               NaN   \n",
-       "2024-12-08 23:00:00+00:00              NaN               NaN   \n",
-       "\n",
-       "                           et0_fao_evapotranspiration  \\\n",
-       "datetime                                                \n",
-       "2024-12-08 22:00:00+00:00                         NaN   \n",
-       "2024-12-08 23:00:00+00:00                         NaN   \n",
-       "\n",
-       "                           vapour_pressure_deficit  wind_speed_10m  \\\n",
-       "datetime                                                             \n",
-       "2024-12-08 22:00:00+00:00                      NaN             NaN   \n",
-       "2024-12-08 23:00:00+00:00                      NaN             NaN   \n",
-       "\n",
-       "                           wind_speed_100m  wind_direction_10m  \\\n",
-       "datetime                                                         \n",
-       "2024-12-08 22:00:00+00:00              NaN                 NaN   \n",
-       "2024-12-08 23:00:00+00:00              NaN                 NaN   \n",
-       "\n",
-       "                           wind_direction_100m  wind_gusts_10m  \\\n",
-       "datetime                                                         \n",
-       "2024-12-08 22:00:00+00:00                  NaN             NaN   \n",
-       "2024-12-08 23:00:00+00:00                  NaN             NaN   \n",
-       "\n",
-       "                           soil_temperature_0_to_7cm  \\\n",
-       "datetime                                               \n",
-       "2024-12-08 22:00:00+00:00                        NaN   \n",
-       "2024-12-08 23:00:00+00:00                        NaN   \n",
+       "                           vapour_pressure_deficit  soil_temperature_0_to_7cm  \\\n",
+       "datetime                                                                        \n",
+       "2010-01-01 01:00:00+00:00                 0.027411                      0.651   \n",
+       "2010-01-01 02:00:00+00:00                 0.024612                      0.651   \n",
        "\n",
        "                           soil_temperature_7_to_28cm  \\\n",
        "datetime                                                \n",
-       "2024-12-08 22:00:00+00:00                         NaN   \n",
-       "2024-12-08 23:00:00+00:00                         NaN   \n",
+       "2010-01-01 01:00:00+00:00                       0.901   \n",
+       "2010-01-01 02:00:00+00:00                       0.901   \n",
        "\n",
-       "                           soil_temperature_28_to_100cm  \\\n",
-       "datetime                                                  \n",
-       "2024-12-08 22:00:00+00:00                           NaN   \n",
-       "2024-12-08 23:00:00+00:00                           NaN   \n",
-       "\n",
-       "                           soil_temperature_100_to_255cm  \\\n",
-       "datetime                                                   \n",
-       "2024-12-08 22:00:00+00:00                            NaN   \n",
-       "2024-12-08 23:00:00+00:00                            NaN   \n",
-       "\n",
-       "                           soil_moisture_0_to_7cm  soil_moisture_7_to_28cm  \\\n",
-       "datetime                                                                     \n",
-       "2024-12-08 22:00:00+00:00                     NaN                      NaN   \n",
-       "2024-12-08 23:00:00+00:00                     NaN                      NaN   \n",
-       "\n",
-       "                           soil_moisture_28_to_100cm  \\\n",
-       "datetime                                               \n",
-       "2024-12-08 22:00:00+00:00                        NaN   \n",
-       "2024-12-08 23:00:00+00:00                        NaN   \n",
-       "\n",
-       "                           soil_moisture_100_to_255cm  sunshine_duration  \\\n",
-       "datetime                                                                   \n",
-       "2024-12-08 22:00:00+00:00                         NaN                NaN   \n",
-       "2024-12-08 23:00:00+00:00                         NaN                NaN   \n",
-       "\n",
-       "                           hour_sin  hour_cos  day_of_week_sin  \\\n",
-       "datetime                                                         \n",
-       "2024-12-08 22:00:00+00:00 -0.500000  0.866025        -0.781831   \n",
-       "2024-12-08 23:00:00+00:00 -0.258819  0.965926        -0.781831   \n",
-       "\n",
-       "                           day_of_week_cos  month_sin  month_cos  \n",
-       "datetime                                                          \n",
-       "2024-12-08 22:00:00+00:00          0.62349       -0.5   0.866025  \n",
-       "2024-12-08 23:00:00+00:00          0.62349       -0.5   0.866025  "
+       "                           soil_temperature_28_to_100cm  month_cos  \n",
+       "datetime                                                            \n",
+       "2010-01-01 01:00:00+00:00                         1.901        1.0  \n",
+       "2010-01-01 02:00:00+00:00                         1.901        1.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
