api prediction work

--- a/notebooks/Torsten_notebook.ipynb
+++ b/notebooks/Torsten_notebook.ipynb
@@ -2537,7 +2537,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "powder_alert2.0",
    "language": "python",
    "name": "python3"
   },
