--- a/notebooks/notebook_model_tests.ipynb
+++ b/notebooks/notebook_model_tests.ipynb
@@ -4557,25 +4557,10 @@
     "from datetime import datetime\n",
     "\n",
     "current_dir = os.getcwd()\n",
-    "relative_path = os.path.join(os.path.dirname(current_dir),\"models\")\n",
+    "relative_path = os.path.join(os.path.dirname(current_dir),\"models/snowfall\")\n",
     "file_name = f\"TransformerModel_{datetime.now().strftime('%Y-%m-%d_%H:%M:%S')}.pt\"\n",
     "file_path = os.path.join(relative_path,file_name)\n",
     "file_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pytorch_lightning import Callback\n",
-    "\n",
-    "class MetricsCallback(Callback):\n",
-    "    def on_validation_epoch_end(self, trainer, pl_module):\n",
-    "\n",
-    "        val_mae = trainer.callback_metrics.get('val_loss')\n",
-    "        trainer.logger.log_metrics({\"val_mae\": val_mae}, step=trainer.current_epoch)"
    ]
   },
   {
@@ -4584,12 +4569,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pytorch_lightning import Trainer\n",
-    "from pytorch_lightning.loggers import TensorBoardLogger, CSVLogger\n",
-    "\n",
-    "csv_logger = CSVLogger(save_dir=relative_path, name=\"snowfall_transformer_csv_logs\")\n",
-    "tb_logger = TensorBoardLogger(save_dir=relative_path, name=\"snowfall_transformer_tb_logs\")\n",
-    "\n",
     "es = EarlyStopping(\n",
     "    monitor=\"val_loss\",\n",
     "    patience=5,\n",
@@ -4598,9 +4577,7 @@
     "\n",
     "pl_trainer_kwargs = {\n",
     "    \"accelerator\": \"auto\",\n",
-    "    \"callbacks\":[es, MetricsCallback()],\n",
-    "    \"logger\": [csv_logger, tb_logger],\n",
-    "    \"log_every_n_steps\": 1,\n",
+    "    \"callbacks\":[es]\n",
     "}\n",
     "\n",
     "best_model = TransformerModel(\n",
@@ -4781,7 +4758,7 @@
     }
    ],
    "source": [
-    "save_path = '/home/anita/code/MadMax1995bb/powder_alert2.0/models'\n",
+    "save_path = '/home/anita/code/MadMax1995bb/powder_alert2.0/models/snowfall'\n",
     "save_path"
    ]
   },
@@ -4791,7 +4768,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_model.save(os.path.join(save_path,\"saved_model_131224.pt\"))"
+    "saved_model_name = \"saved_model_131224.pt\"\n",
+    "best_model.save(os.path.join(save_path,saved_model_name))"
    ]
   },
   {
@@ -5101,7 +5079,7 @@
     }
    ],
    "source": [
-    "loaded_model = TransformerModel.load('/home/anita/code/MadMax1995bb/powder_alert2.0/models/saved_model_131224.pt')"
+    "loaded_model = TransformerModel.load('/home/anita/code/MadMax1995bb/powder_alert2.0/models/snowfall/saved_model_131224.pt')"
    ]
   },
   {
