working on improving model

--- a/notebooks/notebook_model_tests.ipynb
+++ b/notebooks/notebook_model_tests.ipynb
@@ -5656,6 +5656,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date                          datetime64[ns]\n",
+       "temperature_2m                       float64\n",
+       "relative_humidity_2m                 float64\n",
+       "dew_point_2m                         float64\n",
+       "precipitation                        float64\n",
+       "rain                                 float64\n",
+       "snowfall                             float64\n",
+       "snow_depth                           float64\n",
+       "weather_code                         float64\n",
+       "pressure_msl                         float64\n",
+       "surface_pressure                     float64\n",
+       "cloud_cover                          float64\n",
+       "cloud_cover_low                      float64\n",
+       "cloud_cover_mid                      float64\n",
+       "cloud_cover_high                     float64\n",
+       "et0_fao_evapotranspiration           float64\n",
+       "vapour_pressure_deficit              float64\n",
+       "wind_speed_10m                       float64\n",
+       "wind_speed_100m                      float64\n",
+       "wind_direction_10m                   float64\n",
+       "wind_direction_100m                  float64\n",
+       "wind_gusts_10m                       float64\n",
+       "sunshine_duration                    float64\n",
+       "hour_sin                             float64\n",
+       "hour_cos                             float64\n",
+       "day_of_week_sin                      float64\n",
+       "day_of_week_cos                      float64\n",
+       "month_sin                            float64\n",
+       "month_cos                            float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_predict.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
