--- a/notebook_Anita_Gei_snowdepth.ipynb
+++ b/notebook_Anita_Gei_snowdepth.ipynb
@@ -41,7 +41,7 @@
         "id": "yMIufMLjC38h",
         "outputId": "32ad2f30-aa92-415f-cb08-814c22c6a29d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "lbW50V8T7-nV",
         "collapsed": true,
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -653,7 +653,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "3V-uv4fu7-nl"
       },
@@ -676,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "PUZonjWl7-nm"
       },
@@ -718,7 +718,7 @@
       "metadata": {
         "id": "luVA7sRaMLre"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -935,7 +935,7 @@
         "outputId": "cf29a075-7c6e-41d9-d3e8-0b4d39675bbd",
         "collapsed": true
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1267,7 +1267,7 @@
       "metadata": {
         "id": "44tJ3mSup1z4"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1305,7 +1305,7 @@
         "id": "94oTWGBlQdXj",
         "outputId": "7d1c9083-589f-4f27-8671-59599c58e84c"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1345,7 +1345,7 @@
         "id": "-jz7JhAwqPV3",
         "outputId": "e7f9e9d5-c612-4f05-fd36-baea90d9c619"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1419,7 +1419,7 @@
         "id": "wlFfvX4UQwAo",
         "outputId": "eb1049c0-f093-43cb-9838-0a00f6b6cd09"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1470,7 +1470,7 @@
         "id": "bKsS4azgRu3H",
         "outputId": "5e06b72d-64a9-47b9-8038-a7457bf32425"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1513,7 +1513,7 @@
         "id": "7hFVGwwWSfey",
         "outputId": "818ed982-f944-44fb-c89b-ce416f1f8518"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1571,7 +1571,7 @@
         "id": "Kb2FYlvLTaz2",
         "outputId": "15fdadf4-84af-4ec0-be26-dc3e5951af0e"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1626,7 +1626,7 @@
         "id": "ORRV5P6Hsenm",
         "outputId": "8d0f1e97-f9f8-4ae9-fae2-6946d26688f4"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1660,7 +1660,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 101,
+          "height": 118,
           "referenced_widgets": [
             "6fa752704e4d46a4a6c56191013518a0",
             "eeb8954f309d44f0ae26f90b5db9f554",
@@ -1702,6 +1702,16 @@
             }
           },
           "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.03249186121957923"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
         }
       ]
     },
@@ -3126,7 +3136,7 @@
         "id": "XCKLA3BzcOqH",
         "outputId": "e17ec456-e372-4715-c159-658c1e28c743"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -10036,7 +10046,7 @@
         "id": "MQd9ASqLP8Uf",
         "outputId": "4a002577-aa7c-417f-f2a5-4865178ad7b9"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10061,7 +10071,7 @@
         "id": "GCTACiAMRk3q",
         "outputId": "e79b3a3f-eaa4-4487-c403-2aa99ab0eae9"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10130,7 +10140,7 @@
         "id": "14jwvU86Q6fw",
         "outputId": "06aee22e-bd7e-49aa-abc1-ff9cb6d2248d"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10193,7 +10203,7 @@
         "id": "V9wX8praR1cR",
         "outputId": "a6913a4e-e934-406f-a7fe-98898a0db499"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10237,7 +10247,7 @@
         "id": "rr-hMe6rR9-F",
         "outputId": "4e450bdf-f817-48ce-d273-57994b902ac6"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -90021,7 +90031,7 @@
             "layout": "IPY_MODEL_94c8392384fa43298b1f7dcc13649296",
             "placeholder": "​",
             "style": "IPY_MODEL_815f315e1fe84eccb8b35ae10c4642a8",
-            "value": "Predicting DataLoader 0:  73%"
+            "value": "Predicting DataLoader 0: 100%"
           }
         },
         "217d0ea018b8489880cbaa7c34ab3a21": {
@@ -90037,7 +90047,7 @@
             "_view_module": "@jupyter-widgets/controls",
             "_view_module_version": "1.5.0",
             "_view_name": "ProgressView",
-            "bar_style": "",
+            "bar_style": "success",
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_4d634d19d18947bc80e5e802f5103ea9",
@@ -90045,7 +90055,7 @@
             "min": 0,
             "orientation": "horizontal",
             "style": "IPY_MODEL_74ccb3ee19a24cd48c6e797846ae841c",
-            "value": 363
+            "value": 494
           }
         },
         "fdfab8b6019547128ef3202f3bc71c11": {
@@ -90066,7 +90076,7 @@
             "layout": "IPY_MODEL_7ea6ea3e526a462d90fb0f16e67b4a54",
             "placeholder": "​",
             "style": "IPY_MODEL_6897d5875d9240d4ae6803c3526f31df",
-            "value": " 363/494 [01:31&lt;00:33,  3.96it/s]"
+            "value": " 494/494 [02:05&lt;00:00,  3.94it/s]"
           }
         },
         "8df559faa2574a74b494ee894c17122c": {
